--- a/postgres/postgres-configmap.yaml
+++ b/postgres/postgres-configmap.yaml
@@ -5,6 +5,6 @@ metadata:
   labels:
     app: postgres
 data:
-  POSTGRES_DB: postgresdb
-  POSTGRES_USER: postgresadmin
-  POSTGRES_PASSWORD: admin123
+  POSTGRES_DB: kongdb
+  POSTGRES_USER: kong
+  POSTGRES_PASSWORD: kongxs
