--- a/resources/kong-secrets.yaml
+++ b/resources/kong-secrets.yaml
@@ -6,5 +6,5 @@ type: Opaque
 data:
   username: a29uZw==
   password: a29uZw==
-  postgresdbname: a29uZ2Ri
+  postgresdbname: a29uZw==
 #your secret in base64 echo -n 'admin' | base64 YWRtaW4=
