--- a/resources/kong-secrets.yaml
+++ b/resources/kong-secrets.yaml
@@ -2,9 +2,10 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: kongcreds
+  namespace: dev
 type: Opaque
 data:
-  username: a29uZw==
-  password: a29uZw==
-  postgresdbname: a29uZw==
+  username: a29uZy11c2Vy
+  password: UEBzc3cwcmQ=
+  postgresdbname: cG9zdGdyZXM=
 #your secret in base64 echo -n 'admin' | base64 YWRtaW4=
