--- a/main/kong-proxy/kong-proxy-deployments.yaml
+++ b/main/kong-proxy/kong-proxy-deployments.yaml
@@ -2,13 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: kong-proxy
-  # namespace: default
-  # labels:
-  #   app: kong-proxy
-  # annotations:
-  #   external-dns.alpha.kubernetes.io/hostname: " {{ .kongProxyDNS }} "
-  #   service.beta.kubernetes.io/aws-load-balancer-additional-resource-tags: "app=kong-proxy"
-  #   service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
+  namespace: dev
 spec:
   externalTrafficPolicy: Local
   type: LoadBalancer
@@ -24,6 +18,7 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: kong-proxy
+  namespace: dev
 spec:
   replicas: 3
   template:
@@ -66,7 +61,7 @@ spec:
               name: kongcreds
               key: password
         - name: KONG_PG_HOST
-          value: 10.74.112.3
+          value: 10.31.0.3
         - name: KONG_PG_PORT
           value: "5432"
         - name: KONG_PROXY_ACCESS_LOG
