--- a/resources/kong-service-account-permissions.yaml
+++ b/resources/kong-service-account-permissions.yaml
@@ -4,7 +4,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: kong-service-account
-  namespace: default
+  namespace: dev
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
@@ -72,7 +72,7 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: Role
 metadata:
   name: kong-ingress-role
-  namespace: default
+  namespace: dev
 rules:
 - apiGroups:
   - ""
@@ -113,7 +113,7 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: RoleBinding
 metadata:
   name: kong-ingress-role-nisa-binding
-  namespace: default
+  namespace: dev
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -121,7 +121,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: kong-service-account
-  namespace: default
+  namespace: dev
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
@@ -134,4 +134,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: kong-service-account
-  namespace: default
+  namespace: dev
