--- a/resources/kong-secrets.yaml
+++ b/resources/kong-secrets.yaml
@@ -7,5 +7,5 @@ type: Opaque
 data:
   username: a29uZy11c2Vy
   password: UEBzc3cwcmQ=
-  postgresdbname: cG9zdGdyZXM=
-#your secret in base64 echo -n 'admin' | base64 YWRtaW4=
+  postgresdbname: dGVzdA==
+#your secret in base64
