--- a/main/kong-proxy/kong-proxy-deployments.yaml
+++ b/main/kong-proxy/kong-proxy-deployments.yaml
@@ -39,6 +39,10 @@ spec:
                   values:
                   - kong-proxy
               topologyKey: kubernetes.io/hostname
+      volumes:
+      - name: cloudsql
+        secret:
+          secretName: cloudsql
       containers:
       - name: kong-proxy
         image: kong:2.0.3-alpine
@@ -60,6 +64,8 @@ spec:
             secretKeyRef:
               name: kongcreds
               key: password
+        - name: GOOGLE_APPLICATION_CREDENTIALS
+          value: /var/secrets/google/key.json
         - name: KONG_PG_HOST
           value: 10.31.0.3
         - name: KONG_PG_PORT
@@ -70,6 +76,9 @@ spec:
           value: "/dev/stderr"
         - name: KONG_ADMIN_LISTEN
           value: 'off'
+        volumeMounts:
+        - name: cloudsql
+          mountPath: /var/secrets/google
         ports:
         - name: proxy
           containerPort: 8000
